Thunderbird 102.0 does not automatically recreate ImapMail folder if it is deleted
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(thunderbird_esr102+ fixed, thunderbird104 fixed)
People
(Reporter: simweijie, Assigned: mkmelin)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr102+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:91.0) Gecko/20100101 Firefox/91.0
Steps to reproduce:
Sometimes, it is necessary to delete the ImapMail folder from the Thunderbird profile directory in order to force Thunderbird to grab a new copy of mail from the server. We do this by deleting the ImapMail folder from the local profile directory.
Actual results:
Thunderbird does not re-download the mail but instead errors out with:
The Local Directory path "C:\Users\<username>\AppData\Roaming\Thunderbird\Profiles\<profile directory>\ImapMail\<mailbox name>" is invalid. Please pick a different directory.
Expected results:
Thunderbird should re-fetch the mail automatically from the IMAP server. We have this working on Thunderbird 91. It just stopped working in Thunderbird 102.
Updated•7 months ago
|
Updated•7 months ago
|
Assignee | ||
Comment 1•7 months ago
|
||
I don't think deleting that from the profile is supported. If you must, why not just delete the files inside it?
But I don't see why it would have changed from 91 to 102 either. https://searchfox.org/comm-central/rev/fc083479a94ad7ace9f5abe899dfe63be63b9e3e/mailnews/base/src/nsMailDirProvider.cpp#48
Assignee | ||
Comment 2•6 months ago
|
||
This is a regression from bug 1724849 - https://hg.mozilla.org/comm-central/rev/7c50e38cc7de680d912eb919f012df3ccdd00341
Assignee | ||
Comment 3•6 months ago
|
||
Assignee | ||
Updated•6 months ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e17f4d5f3019
ImapMail should be recreated if missing. r=benc
Assignee | ||
Comment 5•6 months ago
|
||
Comment on attachment 9287479 [details]
Bug 1777937 - ImapMail should be recreated if missing. r=benc
[Approval Request Comment]
Regression caused by (bug #): bug 1724849
User impact if declined: if ImapMail doesn't exist, the account doesn't show anything. This may have some impact in enterprise roaming situations.
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): should be safe
Comment 6•6 months ago
|
||
Comment on attachment 9287479 [details]
Bug 1777937 - ImapMail should be recreated if missing. r=benc
[Triage Comment]
Approved for beta
Comment 7•6 months ago
|
||
bugherderuplift |
Thunderbird 104.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/56b0d9e97015
Comment 8•6 months ago
|
||
Comment on attachment 9287479 [details]
Bug 1777937 - ImapMail should be recreated if missing. r=benc
[Triage Comment]
Approved for esr102
Comment 9•6 months ago
|
||
bugherderuplift |
Thunderbird 102.1.1:
https://hg.mozilla.org/releases/comm-esr102/rev/288a59f20639
Description
•