Bug 1777937 - ImapMail should be recreated if missing. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D153064

--HG--
extra : rebase_source : 04b6c297ec64a337df43a999e1c417363f6163c6